# jav

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile
.github/workflows/: ci.yml  release.yml
scripts/: install.ps1  install.sh  publish-linux-x64.sh  publish-win-x64.sh  set-version.sh
src/: cli.rs  main.rs  output.rs  process.rs  ui.rs  upgrade.rs
src/commands/: build.rs  clean.rs  doctor.rs  mod.rs  new.rs  run.rs  test.rs  upgrade.rs
src/project/: detect.rs  mod.rs  sources.rs
src/templates/: mod.rs  render.rs
templates/cli/: template.toml
templates/cli/content/src/main/java/__package_path__/: CommandApp.java
templates/cli/content/src/test/java/__package_path__/: CommandAppTest.java
templates/common/: README.md  flake.nix  gitignore  plain-jav.toml  spring-jav.toml
templates/console/: template.toml
templates/console/content/: build.gradle.kts  pom.xml
templates/console/content/src/main/java/__package_path__/: Main.java
templates/console/content/src/test/java/__package_path__/: MainTest.java
templates/junit/: template.toml
templates/junit/content/src/main/java/__package_path__/: Calculator.java
templates/junit/content/src/test/java/__package_path__/: CalculatorTest.java
templates/springbatch/: template.toml
templates/springboot/: template.toml
templates/springboot/content/: build.gradle.kts  pom.xml
templates/springboot/content/src/main/java/__package_path__/: Application.java  BatchJobConfig.java  Customer.java  CustomerRepository.java  HelloController.java  SecurityConfig.java
templates/springboot/content/src/main/resources/: application.properties
templates/springboot/content/src/test/java/__package_path__/: ApplicationTests.java
templates/springdata/: template.toml
templates/springsecurity/: template.toml
templates/springweb/: template.toml
templates/worker/: template.toml
templates/worker/content/src/main/java/__package_path__/: Worker.java
templates/worker/content/src/test/java/__package_path__/: WorkerTest.java
tests/: cli.rs
