[package]
name = "jav"
version = "2026.623.3"
edition = "2021"
description = "A modern CLI for Java projects"
license = "MIT"

[dependencies]
anyhow = "1.0.95"
anstream = "0.6.18"
camino = "1.1.9"
clap = { version = "4.5.27", features = ["derive"] }
console = "0.15.10"
dialoguer = "0.11.0"
flate2 = "1.1.5"
indicatif = "0.17.9"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tar = "0.4.44"
tera = "1.20.0"
thiserror = "2.0.11"
toml = "0.8.19"
zip = { version = "4.6.1", default-features = false, features = ["deflate"] }

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
predicates = "3.1.3"
tempfile = "3.15.0"
