[package]
name = "jav"
version = "2026.623.5"
edition = "2021"
description = "A modern CLI for Java projects"
license = "MIT"

[dependencies]
anyhow = "1.0.95"
anstream = "1.0.0"
camino = "1.1.9"
clap = { version = "4.5.27", features = ["derive"] }
console = "0.16.3"
dialoguer = "0.12.0"
flate2 = "1.1.5"
indicatif = "0.18.4"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "json", "rustls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.11.0"
tar = "0.4.44"
tera = "1.20.0"
thiserror = "2.0.11"
toml = "1.1.2"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
predicates = "3.1.3"
tempfile = "3.15.0"
